# Backend-GS

./: .gitignore  docker-compose.yml  pyproject.toml
api/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 2021.09.23, at 18:02:18 UTC create_main_user_table.py  2021.09.23, at 18:17:11 UTC create_table_thirdparty_authentication.py  2021.09.24, at 10:25:07 UTC creating_all_tables_interconnected_for_.py  2021.09.27, at 11:00:30 UTC delete_unique_of_phone.py  2021.09.27, at 18:29:11 UTC refresh_token_table.py  2021.09.27, at 18:33:24 UTC delete_password_field.py  2021.09.30, at 17:08:44 UTC create_models_for_devices.py  2021.10.01, at 12:53:16 UTC reform_model_business.py  2021.10.13, at 09:28:32 UTC change_settings_foregn_key_business_role.py  2021.10.24, at 14:29:56 UTC new_base_of_clients_attributes.py  2021.10.26, at 09:02:00 UTC add_email_in_team_member.py  2021.10.28, at 09:04:42 UTC create_event_calendar_table.py  2021.11.01, at 09:10:45 UTC create_participants_model.py  2021.12.29, at 08:15:38 UTC return_password_in_user_model.py
api/services/: authorization.py  config.py  database.py  main.py  schema.py  work_with_db.py
api/services/base/: enums.py  models.py  mutation.py  query.py  resolvers.py  schema.py  work_with_db.py
api/services/business/: enums.py  models.py  mutation.py  query.py  resolvers.py  schema.py  work_with_db.py
api/services/event_calendar/: models.py  mutation.py  query.py  resolvers.py  schema.py  work_with_db.py
api/services/finance/: enums.py  models.py  mutation.py  query.py  resolvers.py  schema.py  work_with_db.py
api/services/settings_db/: filling.py
api/services/settings_db/business_types/: types.json  (+1 more)
api/static/: graphiql.html  old_graphiql.html
(+3 files in other folders)
