[tool.poetry]
name = "GainSystem"
version = "0.1.0"
description = "Set of packeges for virtual enviroment of the project GainSystem"
authors = ["ronnycray <chayka1998A@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
strawberry-graphql = {extras = ["debug-server"], version = "^0.81.0"}
alembic = "^1.7.1"
SQLAlchemy = "^1.4.23"
psycopg2 = "^2.9.1"
asyncpg = "^0.24.0"
pytest = "^6.2.5"
PyJWT = "^2.1.0"
pydantic = {extras = ["email"], version = "^1.8.2"}
pytest-asyncio = "^0.15.1"
SQLAlchemy-Utils = "^0.37.8"
starlette = "^0.16.0"
uvicorn = "^0.15.0"
Werkzeug = "^2.0.1"
Pillow = "^8.3.2"
websockets = "^10.0"
watchgod = "^0.7"
uvloop = "^0.16.0"
urllib3 = "^1.26.6"
idna = "^3.2"
email-validator = "^1.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
